<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('pengadaan_ayam', function (Blueprint $table) {
            $table->id();
            $table->foreignId('kandang_id')
                ->constrained('kandang', 'id');
            $table->foreignId('pic_user_id')
                ->constrained('users', 'id');
            $table->date('tanggal');
            $table->string('kondisi_ayam');
            $table->integer('umur_ayam');
            $table->integer('jumlah_ayam_datang')->default(0);
            $table->integer('jumlah_ayam_mati')->default(0);
            $table->integer('jumlah_ayam_sakit')->default(0);
            $table->integer('jumlah_ayam_masuk_kandang')->default(0);
            $table->text('catatan')->nullable();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('pengadaan_ayam');
    }
};
