Enum hasil_akhir_karantina {
  kembali_kandang
  afkir
  mati
}

Table users {
  id integer [primary key, increment]
  name varchar
  email varchar
  password varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table peternakan { // auditable
  id integer [primary key, increment]
  nama varchar
  lokasi varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table strain { // auditable
  id integer [primary key, increment]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table strain_standart_metric {
  id integer // auditable
  strain_id integer
  uniformity decimal
  berat_badan decimal
  mortalitas decimal
  fcr decimal
  hdp_persen decimal
  hhp_persen decimal
  egg_mass_gram_per_ekor_per_hari decimal
  egg_weight_gram_per_butir decimal
  created_at timestamp
  updated_at timestamp
}

Ref : strain.id < strain_standart_metric.strain_id

Table kandang { // auditable
  id integer [primary key, increment]
  peternakan_id integer
  strain_id integer // strain dipindag dari flock
  nama varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Ref : strain.id < kandang.strain_id
Ref : peternakan.id < kandang.peternakan_id

Table flock { // auditable
  id integer [primary key, increment]
  kandang_id integer
  nama varchar
  kapasitas integer
  created_at timestamp
  updated_at timestamp
}

Table pipe { // auditable
  id integer [primary key, increment]
  flock_id integer
  nama varchar
  created_at timestamp
  updated_at timestamp
}

Table pengadaan_ayam { // auditable
  id integer [primary key, increment]
  pic_user_id integer
  tanggal date
  umur_ayam integer [note: 'dalam satuan minggu']
  kondisi_ayam varchar
  jumlah_ayam_datang integer
  jumlah_ayam_mati integer
  jumlah_ayam_sakit integer
  jumlah_ayam_masuk_kandang integer
  catatan text [null]
  created_at timestamp
  updated_at timestamp
}

Ref : users.id < pengadaan_ayam.pic_user_id

Table pengadaan_ayam_berkas_supplier { // auditable
  id integer [primary key, increment]
  pengadaan_ayam_id integer
  nama_berkas varchar [note: 'surat jalan; data berat; uniformity; rekam kesehatan; vaksin; dll']
  filepath varchar
  created_at timestamp
  updated_at timestamp
}

Table pengadaan_ayam_dokumentasi { // auditable
  id integer [primary key, increment]
  pengadaan_ayam_id integer
  filepath varchar [note: 'file foto']
  created_at timestamp
  updated_at timestamp
}

Table pengadaan_ayam_distribusi { // auditable
  id integer [primary key, increment]
  pengadaan_ayam_id integer
  kandang_id integer
  flock_id integer
  pipe_id integer
  jumlah_ayam integer
  created_at timestamp
  updated_at timestamp
}

Ref : pengadaan_ayam.id < pengadaan_ayam_berkas_supplier.pengadaan_ayam_id
Ref : pengadaan_ayam.id < pengadaan_ayam_dokumentasi.pengadaan_ayam_id
Ref : pengadaan_ayam.id < pengadaan_ayam_distribusi.pengadaan_ayam_id
Ref : kandang.id < pengadaan_ayam_distribusi.kandang_id
Ref : flock.id < pengadaan_ayam_distribusi.flock_id
Ref : pipe.id < pengadaan_ayam_distribusi.pipe_id

Table populasi_ayam {
  id integer [primary key, increment] // auditable
  tanggal date
  kandang_id integer
  flock_id integer
  pipe_id integer
  ayam_sehat integer
  ayam_mati integer
  ayam_afkir integer
  ayam_masuk_karantina integer
  ayam_keluar_karantina integer
  created_at timestamp
  updated_at timestamp
}

Table "4_ayam_afkir" {
  id integer [primary key, increment]
  tanggal_afkir date
  kandang_id integer
  flock_id integer
  pipe_id integer
  umur_ayam integer
  jumlah_ayam_afkir decimal(12,2)
  penyebab_afkir varchar
  pembeli_afkir varchar
  dokumentasi varchar
  catatan text
  created_at timestamp
  updated_at timestamp
}

Table "5_karantina_a" {
  id integer [primary key, increment]
  tanggal_afkir date
  ayam_masuk_karantina decimal(12,2)
  ayam_mati decimal(12,2)
  ayam_afkir_di_karantina decimal(12,2)
  pemberian_pakan decimal(12,2)
  sisa_pakan decimal(12,2)
  jumlah_telur_bagus decimal(12,2)
  jumlah_telur_retak decimal(12,2)
  jumlah_telur_rusak decimal(12,2)
  kandang_id integer
  flock_id integer
  pipe_id integer
  umur_ayam integer
  lama_karantina integer
  hasil_akhir hasil_akhir_karantina
  catatan text
  created_at timestamp
  updated_at timestamp
}

Table "7_perhitungan_pemberian_pakan" {
  id integer [primary key, increment]
  tanggal_pemberian_pakan date
  kandang_id integer
  flock_id integer
  pipe_id integer
  jumlah_ayam integer
  proporsi_pemberian_pagi decimal(5,2)
  proporsi_pemberian_sore decimal(5,2)
  feed_intake_target decimal(8,3)
  total_pakan_kg decimal(10,3)
  catatan text
  created_at timestamp
  updated_at timestamp
}

Table "9_pemberian_pakan_dan_sisa_pak" {
  id integer [primary key, increment]
  tanggal date
  kandang_id integer
  flock_id integer
  jenis_pakan varchar
  pemberian_pakan_per_flock_kg decimal(10,3)
  sisa_pakan_per_flock_kg decimal(10,3)
  created_at timestamp
  updated_at timestamp
}

Table "11_produksi_telur_a" {
  id integer [primary key, increment]
  tanggal date
  usia_ayam integer
  kandang_id integer
  flock_id integer
  jumlah_telur_bagus decimal(12,2)
  jumlah_telur_coklat decimal(12,2)
  jumlah_telur_putih decimal(12,2)
  jumlah_telur_reject decimal(12,2)
  berat_telur_bagus decimal(8,3)
  catatan text
  created_at timestamp
  updated_at timestamp
}

Table "14_sampling_bobot_ayam_a" {
  id integer [primary key, increment]
  tanggal date
  kandang_id integer
  umur integer
  jumlah_ayam_saat_ini integer
  jumlah_ayam_yang_disampling integer
  bobot_badan_sampling_per_ayam decimal(8,3)
  created_at timestamp
  updated_at timestamp
}

Table "16_penjadwalan_disinfektan_kan" {
  id integer [primary key, increment]
  bulan date
  tanggal date
  waktu time
  kandang_id integer
  flock_id integer
  area varchar
  jenis_disinfektan varchar
  merk_disinfektan varchar
  penanggung_jawab varchar
  created_at timestamp
  updated_at timestamp
}

Table "17_penjadwalan_treatment" {
  id integer [primary key, increment]
  bulan date
  tanggal date
  waktu time
  kandang_id integer
  flock_id integer
  jenis_treatment varchar
  metode_pemberian varchar
  dosis_pemberian decimal(10,3)
  penanggung_jawab varchar
  created_at timestamp
  updated_at timestamp
}

Table "18_perhitungan_vaksinasi_vita" {
  id integer [primary key, increment]
  tanggal_pemberian_treatment date
  kandang_id integer
  flock_id integer
  jenis_treatment varchar
  metode_pemberian varchar
  basis_per varchar [note: 'per ekor; per 1000 ekor; per liter air']
  dosis decimal(10,3)
  satuan varchar
  kebutuhan_total decimal(12,3)
  stok_gudang decimal(12,3)
  rencana_pemberian_ovk_via_air decimal(12,3)
  rencana_pemberian_ovk_via_pakan decimal(12,3)
  merk_ovk varchar
  dosis_pemberian_ovk decimal(10,3)
  catatan text
  created_at timestamp
  updated_at timestamp
}

Table "19_form_request_order_ovk" {
  id integer [primary key, increment]
  tanggal_pengecekan date
  kandang_id integer
  jenis_ovk varchar
  merk_ovk varchar
  kebutuhan_ovk decimal(12,3)
  total_kebutuhan_yang_diorder decimal(12,3)
  maksimal_kedatangan date
  created_at timestamp
  updated_at timestamp
}

Table "20_pelaksanaan_treatment" {
  id integer [primary key, increment]
  tanggal date
  kandang_id integer
  flock_id integer
  treatment_yang_dilakukan varchar
  checklist_pelaksanaan varchar
  treatment_lain_yang_dilakukan varchar
  dokumentasi varchar
  created_at timestamp
  updated_at timestamp
}

Table "21_monitoring_kesehatan_ternak" {
  id integer [primary key, increment]
  tanggal_monitoring date
  tim_pelaksana varchar
  kandang_id integer
  i_data_populasi_ayam varchar
  data_populasi_ayam_sehat decimal(12,2)
  data_populasi_ayam_sakit decimal(12,2)
  data_populasi_ayam_mati decimal(12,2)
  data_populasi_ayam_afkir decimal(12,2)
  data_populasi_ayam_karantina decimal(12,2)
  ii_kondisi_lingkungan varchar
  suhu_kandang decimal(6,2)
  kelembaban_kandang decimal(6,2)
  iii_kondisi_pakan varchar
  pemberian_pakan_aktual decimal(10,3)
  sisa_pakan_aktual decimal(10,3)
  iv_produksi_telur varchar
  produksi_telur_bagus decimal(12,2)
  produksi_telur_retak decimal(12,2)
  produksi_telur_rusak decimal(12,2)
  v_treatment_vaksin_obat varchar
  treatment_harian varchar
  catatan text
  created_at timestamp
  updated_at timestamp
}

/* Relationships */
Ref: flock.kandang_id > kandang.id

Ref: populasi_ayam.kandang_id > kandang.id
Ref: populasi_ayam.flock_id   > flock.id
Ref: populasi_ayam.pipe_id    > pipe.id

Ref: "4_ayam_afkir".kandang_id > kandang.id
Ref: "4_ayam_afkir".flock_id   > flock.id
Ref: "4_ayam_afkir".pipe_id    > pipe.id

Ref: "5_karantina_a".kandang_id > kandang.id
Ref: "5_karantina_a".flock_id   > flock.id
Ref: "5_karantina_a".pipe_id    > pipe.id

Ref: "7_perhitungan_pemberian_pakan".kandang_id > kandang.id
Ref: "7_perhitungan_pemberian_pakan".flock_id   > flock.id
Ref: "7_perhitungan_pemberian_pakan".pipe_id    > pipe.id

Ref: "9_pemberian_pakan_dan_sisa_pak".kandang_id > kandang.id
Ref: "9_pemberian_pakan_dan_sisa_pak".flock_id   > flock.id

Ref: "11_produksi_telur_a".kandang_id > kandang.id
Ref: "11_produksi_telur_a".flock_id   > flock.id

Ref: "14_sampling_bobot_ayam_a".kandang_id > kandang.id

Ref: "16_penjadwalan_disinfektan_kan".kandang_id > kandang.id
Ref: "16_penjadwalan_disinfektan_kan".flock_id   > flock.id

Ref: "17_penjadwalan_treatment".kandang_id > kandang.id
Ref: "17_penjadwalan_treatment".flock_id   > flock.id

Ref: "18_perhitungan_vaksinasi_vita".kandang_id > kandang.id
Ref: "18_perhitungan_vaksinasi_vita".flock_id   > flock.id

Ref: "19_form_request_order_ovk".kandang_id > kandang.id

Ref: "20_pelaksanaan_treatment".kandang_id > kandang.id
Ref: "20_pelaksanaan_treatment".flock_id   > flock.id

Ref: "21_monitoring_kesehatan_ternak".kandang_id > kandang.id